Connected the paths of the pages, Added css & js files to each html page, renamed index.js_css_html to represent each page name accordingly.

--- a/views/html/loginPage.html
+++ b/views/html/loginPage.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="loginPage.css">
+    <title>Login</title>
+    <script src="loginPage.js" defer></script>
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
                 <input type="password" id="password" name="password" required>
             </section>
             <section id="submitBox">
-                <input type="submit" id="submitButton" value="Log In">
+                <input type="submit" href="http://127.0.0.1:5500/CarGrail/views/html/financePage.html" id="submitButton" value="Login">
             </section>
 
         </form>
@@ -34,5 +34,9 @@
     <div id="createAccountBox">
         <a href="" id="createAccount">Create Account</a>
     </div>
+<!-- vvv This is a Mock Login button for the time-being until we connect out backend to the front-end vvv -->
+    <button><a href="http://127.0.0.1:5500/CarGrail/views/html/financePage.html">Login</a></button>
+<!-- ^^^ This is a Mock Login button for the time-being until we connect out backend to the front-end ^^^ -->
+    
 </body>
 </html>
