mg/Fix models and controllers

--- a/views/html/loginPage.html
+++ b/views/html/loginPage.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="loginPage.css">
+    <!-- <link rel="stylesheet" href="loginPage.css" type="text/css"> -->
     <title>Login</title>
-    <script src="loginPage.js" defer></script>
 </head>
 <body>
     <header>
-        <img href= "" src="cloud.png">
+        <!-- <img href= "" src="cloud.png"> -->
     </header>
     <div id="loginBox">
         <form>
-
+            
             <section id="usernameBox">
                 <label for="username">Username</label>
                 <input type="text"  id="username" name="username" required>
             </section>
-
+            
             <section id="passwordBox">
                 <label for="password"> Password</label>
                 <input type="password" id="password" name="password" required>
@@ -27,16 +26,18 @@
             <section id="submitBox">
                 <input type="submit" href="http://127.0.0.1:5500/CarGrail/views/html/financePage.html" id="submitButton" value="Login">
             </section>
-
+            
         </form>
-
+        
     </div>
     <div id="createAccountBox">
         <a href="" id="createAccount">Create Account</a>
     </div>
-<!-- vvv This is a Mock Login button for the time-being until we connect out backend to the front-end vvv -->
+    <!-- vvv This is a Mock Login button for the time-being until we connect out backend to the front-end vvv -->
     <button><a href="http://127.0.0.1:5500/CarGrail/views/html/financePage.html">Login</a></button>
-<!-- ^^^ This is a Mock Login button for the time-being until we connect out backend to the front-end ^^^ -->
+    <!-- ^^^ This is a Mock Login button for the time-being until we connect out backend to the front-end ^^^ -->
     
+    <!-- <script>src="loginPage.html"</script> -->
 </body>
 </html>
+
