--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CarGail</title>
+    <title>CarGrail</title>
     <link rel="stylesheet" href="../styles/index.css">
+    <script src="../src/index.js" defer></script>
   </head>
   <body>
-    <div>
-        <a href="/signup">Login Page</a>
-    </div>
-	<script src="../src/index.js"></script>
+
+<header>
+  <img href="" src="cloud.png">
+</header>
+<div id="loginBox">
+  <form>
+
+    <section id="usernameBox">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" required>
+    </section>
+
+    <section id="passwordBox">
+      <label for="password"> Password</label>
+      <input type="password" id="password" name="password" required>
+    </section>
+    <section id="submitBox">
+      <input type="submit" id="submitButton" value="Log In">
+    </section>
+
+  </form>
+
+</div>
+<div id="signUpDiv">
+  <a href="/signup" class ="button" id="createAccount">Create Account</a>
+</div>
+
+
+	
   </body>
 </html>
