updates to front_end

--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -13,9 +13,9 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-          <a class="navbar-item" href="/home">
-            <img src="/views/cloud.png">
-          </a>
+          <a class="navbar-item" href="/home"> 
+           <!-- cloud doesn't fit with navbar  -->
+            <!-- <img id= "cloud" src="/views/cloud.png"> --></a>
       
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
@@ -49,8 +49,11 @@
     
     <div>
 
-      <h1>Here's what you can afford</h1>
-      <div id="cars-container"></div>
+      <h1>Welcome to CarGrail</h1>
+      <div id="cars-wrapper">
+        <div id="cars-container"></div>
+
+      </div>
     </div>
 </body>
 </html>
