--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,9 +11,9 @@
   <body>
 
 <header>
-  <img href="" src="cloud.png">
+  <img src="/views/cloud.png">
 </header>
-<div id="loginBox">
+<!-- <div id="loginBox">
   <form>
 
     <section id="usernameBox">
@@ -31,7 +31,7 @@
 
   </form>
 
-</div>
+</div> -->
 <div id="signUpDiv">
   <a href="/signup" class ="button" id="createAccount">Create Account</a>
 </div>
