--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -1,10 +1,50 @@
+body{
+    background-color:#fffafa;
+}
+
+#cloud{
+    
+}
+
+#navbarBasicExample{
+background-color: #fffafa
+}
+.navbar-item{
+background-color: #fffafa
+}
+
+h1 {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    font-size: 40px;
+    color: aliceblue;
+    margin-top: 20px;
+  }
+
 .car-image {
-    width: 500px;
-    height: 500px;
+    width: 250px;
+    height: 250px;
 }
 
 .card {
-    width: 40%;
+    width: 500px;
     margin: 0 auto;
+    margin: 25px;
     margin-top: 200px;
+}
+
+#cars-container{
+    /* width: 100%; */
+    /* margin-left: 50%; */
+    /* margin-right: 50%; */
+    /* display: flex; */
+    /* margin: 0 auto; */
+    /* flex-wrap: wrap; */
+}
+
+#cars-wrapper{
+    width: 100%;
+    justify-content: center;
+    display: flex;
 }
