--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -124,3 +124,24 @@ section {
     color: #040972;
     transition: color .25s;
 }
+
+#signUpDiv{
+    width: 500px;
+    margin: 0 auto;
+    margin: 25px;
+    margin-top: 200px;
+    background-color: floralwhite; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    /* border-radius: 25% 10%; */
+    border-radius: 50% 20% / 10% 40%;
+}
+
+#signUpDiv:hover {
+    background-color: bisque;
+}
