--- a/public/views/financePage.html
+++ b/public/views/financePage.html
@@ -156,29 +156,12 @@
 
 
 
-</head>
-<body>
-  <header>
-    <img href="" src="cloud.png">
-    <img href="" src="cloud.png">
-  </header>
-  <div id="loginBox">
-    <form>
-
-      <section id="usernameBox">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
-        <input type="text" id="username" name="username" required>
-      </section>
-
-      <section id="passwordBox">
-        <!-- @@ -32,7 +32,227 @@ -->
-
+<!-- </head
   </div>
   <div id="createAccountBox">
     <a href="" id="createAccount">Create Account</a>
     <a id="createAccount">Create Account</a>
-  </div>
+  </div> -->
 
 
 
