--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -49,7 +49,7 @@
     
     <div>
 
-      <h1>Welcome to CarGrail</h1>
+      <h1 id="header">Welcome to CarGrail</h1>
       <div id="cars-wrapper">
         <div id="cars-container"></div>
 
