--- a/public/styles/financePage.css
+++ b/public/styles/financePage.css
@@ -10,7 +10,9 @@
     padding: 0px;
     margin: 0px;
 } */
-
+html{
+    background-color: #89CFF0;
+}
 body {
     background-color: #89CFF0;
     /* height: 100%;
