--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#fffafa;
+    background-color:#18191a
 }
 
 #cloud{
@@ -7,13 +7,30 @@ body{
 }
 
 #navbarBasicExample{
-background-color: #fffafa
+background-color: #18191a;
+height: 100px;
+/* size: ; */
 }
-.navbar-item{
-background-color: #fffafa
+.navbar-item {
+    background-color: #18191a;
 }
+.navbar-item, a {
+    color: white;
+    font-size: 2rem;
 
-h1 {
+}
+#header {
+    animation: color-change 3s infinite;
+  }
+  
+  @keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+  }
+
+#header {
+    /* font-family: Arial, Helvetica, sans-serif; */
     width: 100%;
     justify-content: center;
     display: flex;
@@ -32,15 +49,19 @@ h1 {
     margin: 0 auto;
     margin: 25px;
     margin-top: 200px;
+    /* box-shadow: 5px 10px; */
+    box-shadow: 5px 10px #888888;
 }
-
+.card :hover {
+    background-color:#03d1b2 ;
+}
 #cars-container{
-    /* width: 100%; */
-    /* margin-left: 50%; */
-    /* margin-right: 50%; */
-    /* display: flex; */
-    /* margin: 0 auto; */
-    /* flex-wrap: wrap; */
+    width: 100%;
+    margin-left: 50%;
+    margin-right: 50%;
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
 }
 
 #cars-wrapper{
