--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -27,14 +27,15 @@
 						<input id="last_name" name="last_name" class="input" type="text" placeholder="e.g Smith">
 					</div>
 				</div>
-		
+
 				<div class="field">
 					<label class="label">Email</label>
 					<div class="control">
-						<input id="email" name="email" class="input" type="email" placeholder="e.g. alexsmith@gmail.com">
+						<input id="email" name="email" class="input" type="email"
+							placeholder="e.g. alexsmith@gmail.com">
 					</div>
 				</div>
-		
+
 				<div class="field">
 					<label class="label">Expenses</label>
 					<div class="control">
@@ -75,8 +76,9 @@
 			</div>
 		</form>
 	</div>
-	
+
 
 	<script src="../src/loginPage.js"></script>
 </body>
+
 </html>
