--- a/public/styles/financePage.css
+++ b/public/styles/financePage.css
@@ -1,17 +1,17 @@
 .finance-form {
-    width: 50%;
-    border: 5px solid black;
-    padding: 20px;
-    margin: 0 auto;
-    margin-top: 15vh;
+  width: 50%;
+  border: 5px solid black;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 15vh;
 }
 
-html{
-    background-color: #89CFF0;
+html {
+  background-color: #89cff0;
 }
 body {
-    background-color: #89CFF0;
-    /* height: 100%;
+  background-color: #89cff0;
+  /* height: 100%;
     width: 100%; 
     display: flex;
     align-items: center;
@@ -19,114 +19,111 @@ body {
     justify-content: center; */
 }
 
-
 .nextBox {
-    display: flex;
-    align-self: flex-end;
-    align-items: flex-end;
-    justify-content: center;
-    width: 40%;
-    /* height: 35px; */
+  display: flex;
+  align-self: flex-end;
+  align-items: flex-end;
+  justify-content: center;
+  width: 40%;
+  /* height: 35px; */
 }
 
 .nextButton {
-    background-color: cornflowerblue;
-    width: 100%;
-    height: 35px;
-    border: none;
-    color: white;
+  background-color: cornflowerblue;
+  width: 100%;
+  height: 35px;
+  border: none;
+  color: white;
 }
 
 .nextButton:hover {
-    background-color: steelblue;
-    transition: background-color .3s;
+  background-color: steelblue;
+  transition: background-color 0.3s;
 }
 
 .backBox {
-    display: flex;
-    /* align-self: ; */
-    align-items: flex-end;
-    justify-content: center;
-    width: 40% !important;
-    /* background-color: red; */
+  display: flex;
+  /* align-self: ; */
+  align-items: flex-end;
+  justify-content: center;
+  width: 40% !important;
+  /* background-color: red; */
 }
 
 .backButton {
-    width: 100%;
-    height: 35px;
-    border: none;
-    background-color: #d1d1d1;
-    color: white;
+  width: 100%;
+  height: 35px;
+  border: none;
+  background-color: #d1d1d1;
+  color: white;
 }
 
 .backButton:hover {
-    background-color: darkgray;
-
+  background-color: darkgray;
 }
 
 #finishBox {
-    display: flex;
-    align-self: flex-end;
-    align-items: flex-end;
-    /* justify-content: center; */
-    width: 40% !important;
-    /* background-color: black; */
+  display: flex;
+  align-self: flex-end;
+  align-items: flex-end;
+  /* justify-content: center; */
+  width: 40% !important;
+  /* background-color: black; */
 }
 
 #finishButton {
-    width: 100%;
-    height: 35px;
-    border: none;
-    background-color: green;
-    color: white;
+  width: 100%;
+  height: 35px;
+  border: none;
+  background-color: green;
+  color: white;
 }
 
 #dreamCarForm section {
-    display: flex;
-    flex-direction: row;
-    width: 20%;
-    height: 200px;
-    /* background-color: red; */
+  display: flex;
+  flex-direction: row;
+  width: 20%;
+  height: 200px;
+  /* background-color: red; */
 }
 
 .navigation {
-    display: flex;
-    align-self: flex-end;
-    align-items: flex-end;
-    justify-content: space-between;
-    width: 25%;
-    /* height: 100px; */
-    /* background-color: red; */
+  display: flex;
+  align-self: flex-end;
+  align-items: flex-end;
+  justify-content: space-between;
+  width: 25%;
+  /* height: 100px; */
+  /* background-color: red; */
 }
 
 .createShoppingExpenseBox {
-    display: flex;
-    flex-direction: row;
-    width: 40%;
+  display: flex;
+  flex-direction: row;
+  width: 40%;
 }
 
 .createShoppingExpenseBox input {
-    width: 30%;
+  width: 30%;
 }
 
 #idForm {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .numberInput input {
-    width: 30%;
+  width: 30%;
 }
 
 #incomeForm .numberInput {
-    width: 35%;
+  width: 35%;
 }
 
 #incomeForm .numberInput input {
-    width: 50%;
+  width: 50%;
 }
 
 #accountInputForm .textInput {
-    width: 45%;
+  width: 45%;
 }
-
